[BE][CHORE] commit the framework work that had accumulated uncommitted
## What

Everything else outstanding in this checkout, committed on request so it stops living
on one disk only.

## Changes

Touches, by module: `jmouse-common`, `jmouse-jdbc`, `jmouse-beans`, `jmouse-vendor`,
`jmouse-materializer`, `jmouse-security`, `jmouse-expression`, `jmouse-context`,
`jmouse-transaction`, `jmouse-spring`, `jmouse-mapper-el`, `jmouse-el`,
`jmouse-storage`, `jmouse-access`.

## Why

⚠️ **This was not authored in the session that committed it**, and the message
deliberately claims nothing about what the changes mean. It is a rescue commit: the
work was uncommitted across a week and a half and had no copy anywhere else. Reading
the diff is the only way to learn what is in it — `git log` will not tell you, and
this line is here so nobody assumes otherwise.

⚠️ The jMQ grammar work in `jmouse-query` and `jmouse-query-sql` is deliberately NOT
in here; it is the commit before this one, under JMF-279, with its reasoning.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01N74bc1ABgUa4DTd6GQQnRx